--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -48,7 +48,7 @@ jobs:
     - name: SonarCloud Scan
       uses: SonarSource/sonarcloud-github-action@master
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to decorate PRs
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       with:
         args: >
@@ -56,6 +56,17 @@ jobs:
           -Dsonar.projectKey=tukue_simple_api
           -Dsonar.python.coverage.reportPaths=coverage-reports/coverage.xml
           -Dsonar.sources=.
-          -Dsonar.tests=tasks # Adjust if your tests are located elsewhere or use a pattern
+          -Dsonar.tests=tasks
+
+    - name: SonarCloud Quality Gate Check
+      uses: SonarSource/sonarcloud-quality-gate-action@v1.1.0
+      with:
+        scanMetadataReportFile: .scannerwork/report-task.txt
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+    # (Optional) Only steps after this will run if the Quality Gate passes
+    - name: Deploy or Next Step
+      run: echo "Quality Gate passed, continuing pipeline..."
 
 
