--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -46,30 +46,28 @@ jobs:
         coverage report
       working-directory: ${{ github.workspace }}
 
-    - name: SonarCloud Scan
-      if: ${{ false }}  # skip for now
-      uses: SonarSource/sonarcloud-github-action@master
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      with:
-        args: >
-          -Dsonar.organization=tukue
-          -Dsonar.projectKey=tukue_simple_api
-          -Dsonar.python.coverage.reportPaths=coverage-reports/coverage.xml
-          -Dsonar.sources=.
-          -Dsonar.tests=tasks
+    # - name: SonarCloud Scan
+    #   uses: SonarSource/sonarcloud-github-action@master
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    #   with:
+    #     args: >
+    #       -Dsonar.organization=tukue
+    #       -Dsonar.projectKey=tukue_simple_api
+    #       -Dsonar.python.coverage.reportPaths=coverage-reports/coverage.xml
+    #       -Dsonar.sources=.
+    #       -Dsonar.tests=tasks
 
-    - name: SonarCloud Quality Gate Check
-      if: ${{ false }}  # skip for now
-      uses: SonarSource/sonarcloud-quality-gate-action@master
-      with:
-        scanMetadataReportFile: .scannerwork/report-task.txt
-      env:
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    # - name: SonarCloud Quality Gate Check
+    #   uses: SonarSource/sonarcloud-quality-gate-action@master
+    #   with:
+    #     scanMetadataReportFile: .scannerwork/report-task.txt
+    #   env:
+    #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
     # (Optional) Only steps after this will run if the Quality Gate passes
-    - name: Deploy or Next Step
+    - name:  Next Step
       run: echo "Quality Gate passed, continuing pipeline..."
 
 
