--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
       with:
-        fetch-depth: 0  # Required for SonarQube analysis
+        fetch-depth: 0
 
     - name: Set up Python
       uses: actions/setup-python@v3
@@ -24,13 +24,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install coverage
 
-    - name: Run Tests with Coverage
+    - name: Run Tests
       run: |
-        python -m coverage run -m pytest tasks/tests --cov=tasks --cov-report=term-missing -v
-        python -m coverage xml -o coverage-reports/coverage.xml
-        python -m coverage report
+        pytest
       working-directory: ${{ github.workspace }}
 
 
